# makersmiths-shop

./:    .gitignore  CLAUDE.md  CLAUDE.md.bak  README.md  README.md.bak  ai_project_roadmap.excalidraw  ai_project_roadmap.md  ai_project_roadmap_V2.excalidraw  ai_project_roadmap_V2.md  feature-list.yaml  metalshop-volunteer-opportunity.yaml  parse-opp-tasks.py  tasks-list.md  tasks-list.yaml  use-case-list.yaml
_archive/: areas-list.yaml  locations-list.yaml  metalshop-volunteer_opportunity.yaml  shops-list.yaml  stewards-list.yaml  tasks-list.md  volunteer_opportunities.yaml
prototyping/proto1/: CLAUDE.md  MSL-volunteer-opportunities.yaml  README.md  README.md.bak  msl-schema.yaml  msl.db  pyproject.toml
prototyping/proto1/@scripts/: db_create.py  db_delete.py  db_list.py  db_purge.py  db_read.py  db_replicate.py  db_table_create.py  db_update.py  db_validate_task_table.py
prototyping/proto1/@tests/: conftest.py  test_crud.py  test_db_create.py  test_db_table_create.py
prototyping/proto1/docs/superpowers/plans/: 2026-05-12-eliminate-hardcoded-task-fields.md  2026-05-12-schema-driven-db-table-create.md
prototyping/proto1/docs/superpowers/specs/: 2026-05-12-eliminate-hardcoded-task-fields-design.md  2026-05-12-schema-driven-db-table-create-design.md
prototyping/proto1/scripts/: create_db_schema.py  db_list.py  db_purge.py  db_table_create.py  db_update.py  db_utils.py  task_id_to_uuid.py
prototyping/proto1/tests/: conftest.py  test_bulk_ops.py  test_create_db_schema.py  test_crud.py  test_db_table_create.py  test_db_utils.py  test_helpers.py
(+201 files in other folders)
